parelpracht/base/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    io.kompose.service: backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - name: backend
          image: abc.docker-registry.gewis.nl/crm/parelpracht/server:1.5.0
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: backend-files
              mountPath: /usr/src/app/data
            - name: media
              mountPath: /usr/src/app/data/logos
              subPath: logos
            - name: media
              mountPath: /usr/src/app/data/backgrounds
              subPath: backgrounds
      restartPolicy: Always
      volumes:
        - name: backend-files
          persistentVolumeClaim:
            claimName: backend-files
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    io.kompose.service: backend
spec:
  selector:
    io.kompose.service: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
